# financetool

./: .gitignore  AI_ANALYST_README.md  AI_DEBUG_SETUP.md  API_CONSISTENCY_REPORT.md  API管理优化方案总结.md  API管理完整解决方案.md  COMPLETE_CHART_WORKFLOW_GUIDE.md  DATABASE_READINESS_REPORT.md  ENHANCED_CHART_WORKFLOW_GUIDE.md  ENHANCED_LOGGING.md  FEATURE_BRANCH_SUMMARY.md  FEATURE_SUMMARY.md  FINAL_TESTING_GUIDE.md  FLUTTER_CHART_DESIGN_GUIDE.md  FLUTTER_CHART_SYSTEM_GUIDE.md  FLUTTER_MIGRATION_PLAN.md  FLUTTER_PREPARATION_SUMMARY.md  FLUTTER_TECHNICAL_ANALYSIS.md  IBKR_API_INTEGRATION_SUMMARY.md  IBKR_INTEGRATION_PLAN.md  INSURANCE_MODULE_README.md  MCP_SERVICE_DETAILED_EVALUATION_REPORT.md  MCP_SMART_CHART_GUIDE.md  MCP_TABLE_TEST_GUIDE.md  MERGE_CHECKLIST.md  MERGE_SUMMARY.md  MERGE_TO_MAIN_INSTRUCTIONS.md  MOBILE_POSITIONS_COMPLETE_FIX.md  MOBILE_REFRESH_FIX.md  MOBILE_TESTING_GUIDE.md  OKX_COMPREHENSIVE_DATA_PLAN.md  OKX_DATA_STORAGE_PLAN.md  PAYPAL_API_INTEGRATION_SUMMARY.md  PAYPAL_PERMISSION_SETUP.md  PAYPAL_SOLUTION_SUMMARY.md  RAILWAY_DATA_PERSISTENCE_ANALYSIS.md  RAILWAY_DATA_PERSISTENCE_FINAL_FIX.md  RAILWAY_DATA_PERSISTENCE_FIXED.md  RAILWAY_DATA_PERSISTENCE_SOLUTION.md  RAILWAY_DEPLOYMENT_FIX_UPDATE.md  (+53 more)
backend/: .dockerignore  .env.test  15_00_NAV_MATCHING.md  API_CONFIG.md  API_优化方案.md  API管理页面使用说明.md  DATABASE_COMPARISON_REPORT.md  DEPLOYMENT_MIGRATION_SUMMARY.md  DEPLOYMENT_OPTIMIZATION.md  DYNAMIC_MIGRATION_CHECK.md  Dockerfile  Dockerfile.debug  Dockerfile.prod  FINAL_DEPLOYMENT_RISK_ASSESSMENT.md  FINAL_GIT_COMMIT_SUMMARY.md  FINAL_VERIFICATION_SUMMARY.md  (+109 more)
(+393 files in other folders)
